Updated /bookings
